Finalizando los estilos del Footer_Mobile First

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google</title>
+  <link rel="stylesheet" href="./styles/styles.css">
   <script src="https://kit.fontawesome.com/d48e65c896.js" crossorigin="anonymous"></script>
 
 </head>
@@ -17,7 +18,7 @@
           <li><a href="">Imagenes</a></li>
         </ul>
       </nav>
-      <span ><i class="fas fa-layer-group"></i></span>
+      <span ><i class="menu fas fa-layer-group"></i></span>
       <img src="https://scontent.flim15-2.fna.fbcdn.net/v/t1.6435-9/53216974_2087782754841189_440592021694971904_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=09cbfe&_nc_eui2=AeGxiiQkxP-R0WBj_ZWs3307-PHKubG42pD48cq5sbjakA9M-igsubvZGcctYWawyqBRWjo7jq1pwTtMn3nNiliy&_nc_ohc=tcvBevvhW5oAX_6dIWS&_nc_ht=scontent.flim15-2.fna&oh=9c54a5dc6cfca859ef746e1b72e4fbce&oe=60B60CFF" alt="Foto de Perfil">
     </div>
   </header>
@@ -32,7 +33,7 @@
         </div>
       </div>
       <div class="google-conteiner__filter">
-        <div class="search-google">
+        <div class="search-google__info">
           <button>Buscar con Google</button>
           <button>Me siento con suerte</button>
         </div>
@@ -57,7 +58,7 @@
         </ul>
       </div>
       <div class="search-info">
-        <p><a href="Como funciona la busqueda"></a></p>
+        <p><a href="">Como funciona la busqueda</a></p>
       </div>
       <div class="terminos-info">
         <ul>
