--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google</title>
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/tablet.css" media="(min-width: 500px)">
   <script src="https://kit.fontawesome.com/d48e65c896.js" crossorigin="anonymous"></script>
 
 </head>
