--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Google</title>
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/tablet.css" media="(min-width: 500px)">
+  <link rel="stylesheet" href="./styles/laptop.css" media="(min-width: 800px)">
   <script src="https://kit.fontawesome.com/d48e65c896.js" crossorigin="anonymous"></script>
 
 </head>
